# typeful

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
src/type_cast/_cast/: __init__.py  to_bool.py  to_tuple.py  try_cast.py  unflatten_dict.py  url_to_snake_case.py
src/type_cast/_dataclass/: __init__.py  _exceptions.py  convert_to_type.py  get_converter.py  get_dataclass_field_name_to_field.py  to_dataclass.py
src/type_cast/_type/: __init__.py  _alias.py  dataclass_protocol.py  eval_forward_refs.py  get_container_type.py  get_name_from_type.py  get_non_generic_args.py  is_collection.py  is_instance.py  is_iterable.py  is_mapping.py  is_tuple.py  try_extract_type_notes.py
src/typeful/: __init__.py
src/typeful/_cast/: to_datetime.py  to_list.py  url_to_snake_case.py
src/typeful/_dataclass/: convert_to_type.py  get_dataclass_field_name_to_type.py  get_field_value.py  to_dataclass.py
src/typeful/_type/: __init__.py
tests/_cast/: test_str_to_bool.py  test_to_bool.py  test_to_datetime.py  test_to_list.py  test_to_tuple.py  test_try_cast.py  test_unflatten_dict.py  test_url_to_snake_case.py
tests/_dataclass/: test_get_converter.py  test_get_dataclass_field_name_to_field.py  test_get_field_value.py  test_to_dataclass.py
tests/_type/: test_any_type.py  test_dataclass_protocol.py  test_eval_forward_refs_in_local_dataclasses.py  test_get_container_type.py  test_get_evaled_dataclass_fields.py  test_get_name_from_type.py  test_get_non_generic_args.py  test_is_collection.py  test_is_instance.py  test_is_iterable.py  test_is_mapping.py  test_is_tuple.py  test_try_extract_type_notes.py
type_cast/: __init__.py
type_cast/_cast/: str_to_bool.py  to_datetime.py  to_list.py  try_cast.py  unflatten_dict.py
type_cast/_dataclass/: __init__.py  get_dataclass_field_name_to_field.py  get_field_value.py
type_cast/_type/: dataclass_protocol.py  is_instance.py  is_iterable.py  is_tuple.py
