[project]
name = "type-cast"
version = "1.0.0"
description = "Tools to introspect, validate, and cast Python types at runtime"
authors = [
    {name = "Miriada"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "frozendict>=2.4.7",
    "no-value>=1.0.0",
    "typing_extensions>=4.5.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "coverage>=7.13.5",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
