[project]
name = "type-cast"
version = "1.0.0"
description = "Tools to introspect, validate, and cast Python types at runtime"
authors = [
    {name = "Miriada", email = "info@miriada.io"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "frozendict>=2.4.7",
    "no-value>=1.0.0",
    "typing_extensions>=4.5.0",
]
keywords = ["type", "cast", "casting", "typing", "introspection", "dataclass", "conversion", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/miriada-io/type-cast"
Repository = "https://github.com/miriada-io/type-cast"
Issues = "https://github.com/miriada-io/type-cast/issues"
Changelog = "https://github.com/miriada-io/type-cast/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/type_cast"]
